# RLinf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  compute_norm_stats.sh  pyproject.toml  run.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  troubleshooting.yml  usage.yml
.github/workflows/: agent-e2e-tests.yml  auto_placement.yml  ci-tests.yml  code-test.yml  coding_online_rl_e2e.yml  commit_check.yml  docker-build.yml  embodied-e2e-tests.yml  embodied_e2e.yml  install.yml  lint.yml  math_e2e.yml  math_e2e_rollout_logprobs.yml  pr-title-check.yml  scheduler-tests.yml  sft-e2e-tests.yml  unit-tests.yml  unit_test.yml
docker/: Dockerfile  README.md
docker/embodied/: Dockerfile.openvla.hf.fsdp  Dockerfile.openvlaoft.hf.fsdp  Dockerfile.pi0.hf.fsdp
docker/math/: Dockerfile.sglang.vllm.megatron  Dockerfile.sglang0.4.6post5.vllm0.8.5.megatron0.13.te2.1.0
docker/torch-2.6/: Dockerfile  project
docs/: README.md  autobuild.sh  doc_class_require.txt  no_build.txt
docs/source/: conf.py  index.rst  navbar.yml
docs/source-en/: .readthedocs.yaml  conf.py  index.rst
docs/source-zh/: .readthedocs.yaml  conf.py  index.rst  navbar.yml
examples/coding_online_rl/: main_coding_online_rl.py  main_coding_rl_llm_judge.py  run_main_coding_online_rl.sh  run_main_coding_rl_llm_judge.sh  simple_online_coding_client.py
examples/embodiment/: collect_data.sh  collect_real_data.py  eval_all.sh  eval_behavior_move_to_all.sh  eval_behavior_skill_chain.sh  eval_embodied_agent.py  eval_embodiment.sh  eval_mani_ood.sh  run_async.sh  run_embodiment.sh  run_embodiment_evac.sh  run_realworld.sh  run_realworld_async.sh  train_async.py  train_embodied_agent.py
examples/math/: main_math.py  main_math_pipeline.py  run_main_math_grpo_megatron.sh  run_main_math_pipeline_grpo_megatron.sh  run_placement_autotune.sh
examples/multiturn_demo/: main_mcp_with_session.py  main_tool.py  run_main_mcp_with_session.sh  run_main_tool.sh
examples/reasoning/: main_grpo.py  run_main_grpo_math.sh  run_main_grpo_vqa.sh  run_placement_autotune.sh
examples/sft/: run_embodiment_sft.sh  train_embodied_sft.py
ray_utils/: check_ray.sh  start_ray.sh
ray_utils/realworld/: setup_before_ray.sh
requirements/: README.md  install.sh  install_embodied_deps.sh  megatron.txt  openpi.txt  openvla.txt  openvla_oft.txt  pi0.txt
requirements/embodied/: download_assets.sh  sys_deps.sh
requirements/reason/: megatron.txt
rlinf/: config.py
rlinf/algorithms/: advantages.py  losses.py  registry.py  utils.py
rlinf/data/: __init__.py  datasets.py  embodied_io_struct.py  io_struct.py
rlinf/envs/: __init__.py  action_utils.py  env_manager.py  env_offload_wrapper.py  libero_env.py  maniskill_env.py  utils.py
rlinf/models/: __init__.py
rlinf/runners/: agent_runner.py  async_embodied_runner.py  coding_online_rl_runner.py  embodied_eval_runner.py  embodied_runner.py  math_runner.py  reasoning_runner.py  sft_runner.py
rlinf/scheduler/: __init__.py  accelerator.py  cluster.py
rlinf/utils/: data_iter_utils.py  distributed.py  flops.py  initialize.py  metric_logger.py  metric_utils.py  omega_resolver.py  patcher.py  placement.py  profiler.py  runner_utils.py  timers.py  train_utils.py  utils.py
scripts/: train.py  train_pytorch.py
tests/: test_channel.py  test_comm.py  test_intra_gpu_comm.py  test_placement.py  test_task.py
tests/unit_tests/: test_algorithm_utils.py  test_auto_placement.py  test_channel.py  test_comm.py  test_intra_gpu_comm.py  test_openpi_privileged_tokens.py  test_placement.py  test_task.py  test_worker.py
toolkits/: concat_video_segments.py
toolkits/auto_placement/: resource_allocator.py  scheduler_task.py  workflow.py
toolkits/ckpt_convertor/: config.py  convert_dcp_to_state_dict.py  convert_hf_to_mg.py  convert_hf_to_middle_file.py  mg2hf_1.5b.sh  (+5 more)
(+657 files in other folders)
