[project]
name = "RLinf"
version = "0.1.0"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "==3.11.10"
keywords = [
    "reinforcement-learning",
    "embodied-intelligence",
    "large-language-models",
]
classifiers = [
    #   2 - Pre-Alpha  
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core System
    "accelerate",
    "ray[default]>=2.47.0",
    "torch==2.5.1",

    # Data processing
    "pylatexenc",
    "datasets",
    "latex2sympy2 @ git+https://github.com/RLinf/latex2sympy2.git",
    "sentencepiece",
    "torchdata",
    "wandb",
    "word2number",
    "regex",
    "scipy",

    # Utilities
    "hydra-core==1.4.0.dev1",
    "einops",
    "nvitop",
    "pybind11",
    "torch-memory-saver",
    "setuptools>=69.5.1,<75.9",

    # Logging
    "swanlab",
    "tensorboard",
]

[project.optional-dependencies]
sgl_vllm = [
    "transformers==4.48.3",
    "sglang[all]==0.4.4",
    "vllm==0.7.1",
]
embodied = [
    "prismatic",
    "transformers==4.40.1",
    "draccus",
    "rich",
    "tensorflow_graphics",
    "peft==0.11.1",
    "timm==0.9.10",
    "mani_skill @ git+https://github.com/haosulab/ManiSkill.git",
    "tensordict",
    "libero @ git+https://github.com/Lifelong-Robot-Learning/LIBERO.git"
]

[tool.uv]
prerelease = "allow"
conflicts = [
    [
      { extra = "sgl_vllm" },
      { extra = "embodied" },
    ],
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
isort = {known-first-party = ["rlinf"]}
select = ["C", "E", "F", "I", "W", "CPY001", "RUF013", "UP006", "PERF102", "PLC1802", "PLC0208", "D", "RUF002"]
ignore = [
    "C901", # "complex-structure"
    "E501", # "line-too-long"
    "E741", # "ambiguous-variable-name"
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D203", # "incorrect-blank-line-before-class", conflict with D211,
    "D213", # "multi-line-summary-second-line", conflict with D212
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Only enable docstring check for the scheduler module for now.
"!rlinf/scheduler/**.py" = ["D", "RUF002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"